# task3-dsw

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  raport.md
.github/workflows/: test.yml
docs/: code.md  currency.md  index.md  instalation.md  interactive.mkd
example_data/: database.json  invoices.csv  test.json
task3_dsw/: __init__.py  database.py  invoices.py  logger.py  main.py  menu.py  nbp_api.py  payments.py  settings.py
tests/: conftest.py  test_database.py  test_invoices.py  test_nbp_api.py  test_payments.py
